# Heimdall-Kvasir

./: .env  .gitignore  CLAUDE.md  README.md  sync-log.txt  sync-skills.sh
.claude/: settings.local.json
tools/gemlogin-mcp/: .gitignore  CHANGELOG.md  LICENSE  README.md  convert_to_native.py  create_fb_review_script.py  create_matrix_script.py  create_yt_script.py  enhance_native.py  fb_review_script.js  new_script_params.json  pyproject.toml  tiktok_script.js  update_db.py  yt_booster_logic.js
tools/gemlogin-mcp/.agents/skills/: SKILLS_REGISTRY.md
tools/gemlogin-mcp/.agents/skills/gemlogin/: SKILL.md
tools/gemlogin-mcp/.agents/skills/gemlogin-edit/: SKILL.md
tools/gemlogin-mcp/.agents/skills/gemlogin-edit/scripts/: create_test_reload.py  reload_gemlogin.ps1  reload_gemlogin.py
tools/gemlogin-mcp/.agents/skills/gemlogin-facebook-multipost/: SKILL.md
tools/gemlogin-mcp/.agents/skills/gemlogin-profile-operations/: SKILL.md
tools/gemlogin-mcp/.agents/skills/gemlogin-script-patterns/: SKILL.md
tools/gemlogin-mcp/.agents/skills/gemlogin-tiktok/: SKILL.md
tools/gemlogin-mcp/.agents/skills/gemlogin-tiktok/agents/: openai.yaml
tools/gemlogin-mcp/.agents/skills/gemlogin-update-skills/: SKILL.md
tools/gemlogin-mcp/.agents/skills/gemlogin-update-skills/agents/: openai.yaml
tools/gemlogin-mcp/.agents/skills/gemlogin-update-skills/scripts/: update_gemlogin_skills.py
tools/gemlogin-mcp/.agents/skills/gemlogin-youtube-automation/: SKILL.md
tools/gemlogin-mcp/gemlogin_mcp/: __init__.py  server.py
tools/gemlogin-mcp/tests/: test_local_tools.py  test_smoke.py
(+326 files in other folders)
